--- a/examples/VectorOperation.html
+++ b/examples/VectorOperation.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8" />
@@ -15,6 +15,7 @@
             const layer = new mp.Layer().appendTo(document.body);
             const camera = layer.camera;
             const axes = new mp.Axes();
+            axes.addArrow();
 
             const oringin = new mp.Point(0, 0);
             const pA = new mp.Point(3, 2);
@@ -28,16 +29,14 @@
 
             pA.moveTo([-1, -3, 0], { runTime: 10 });
 
-            camera.position.copy([7, 7, 7]);
-            camera.lookAt([0, 0, 0]);
-            console.log(camera.rotation);
-            layer.play(mp.COLORS.GRAY_E);
-            layer.actionList.add(0, Infinity, {
+            layer.actionList.addInfinity({
                 update: () => {
                     cross.vector = a.vector.cross(b.vector);
                     cross.normal = layer.camera.position;
                 },
             });
+            layer.enableOrbitControl();
+            layer.play(mp.COLORS.GRAY_E);
         </script>
     </body>
 </html>
