--- a/gallery/Basic Example/index.html
+++ b/gallery/Basic Example/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Use Webgl Renderer</title>
+        <title>Basic Example</title>
     </head>
     <body>
         <script type="module" src="script.js"></script>
